Rename argument to better reflect purpose

BUG: 459020